--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
+  path_provider: ^2.1.5
   sqflite: ^2.4.1
   path: ^1.9.0
+  get: ^4.6.6
+  fluttertoast: ^8.2.10
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -52,6 +57,10 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/sale.png"
 flutter:
 
   # The following line ensures that the Material Icons font is
